--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "access": "public"
   },
   "dependencies": {
-    "@edx/brand": "npm:@openedx/brand-openedx@^1.2.2",
+    "@edx/brand": "github:Vyer-Tech-Team/brand-openedx#lavt-prod",
     "@edx/browserslist-config": "^1.1.0",
+    "@edx/frontend-component-header": "github:Vyer-Tech-Team/frontend-component-header#lavt-prod",
     "@edx/frontend-enterprise-hotjar": "3.0.0",
     "@edx/frontend-platform": "8.1.0",
     "@edx/openedx-atlas": "^0.6.0",
